[package]
name = "tui-revolt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robespierre = { git = "https://github.com/dblanovschi/robespierre", branch = "main", package = "robespierre-client-core" }
tokio = { version = "1", features = ["full"] }
tui = "0.16"
rand = "0.8"
termion = "1.0"
unicode-width = "0.1"

tracing-subscriber = "0.2"
tracing = "0.1"
